logs/pattern-matching.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/EBNFParser-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/Linq-0.3.dist-info'...
Listing './lib/python3.5/site-packages/Ruikowa'...
Listing './lib/python3.5/site-packages/Ruikowa/Bootstrap'...
Listing './lib/python3.5/site-packages/Ruikowa/Core'...
Listing './lib/python3.5/site-packages/Ruikowa/ObjectRegex'...
Listing './lib/python3.5/site-packages/linq'...
Listing './lib/python3.5/site-packages/linq/core'...
Listing './lib/python3.5/site-packages/linq/standard'...
Listing './lib/python3.5/site-packages/pattern_matching'...
Listing './lib/python3.5/site-packages/pattern_matching/core'...
Compiling './lib/python3.5/site-packages/pattern_matching/core/match.py'...
***   File "./lib/python3.5/site-packages/pattern_matching/core/match.py", line 136
    self.cases: Tuple[Union[Var, Type, Patch], Callable, bool] = cases
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pattern_matching/core/parserlib'...
Compiling './lib/python3.5/site-packages/pattern_matching/core/pattern.py'...
***   File "./lib/python3.5/site-packages/pattern_matching/core/pattern.py", line 36
    return f'Type[{self.inf}<= this <={self.sup}' \
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pattern_matching/core/tco.py'...
***   File "./lib/python3.5/site-packages/pattern_matching/core/tco.py", line 85
    new_codes = f'if True:\n{generate_session(fn_name)(ast)}'
                                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pattern_matching-0.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pipe_fn'...
Compiling './lib/python3.5/site-packages/pipe_fn/__init__.py'...
***   File "./lib/python3.5/site-packages/pipe_fn/__init__.py", line 51
    raise ValueError(f'`callable` expected, but get a `{then.__class__}` instead.')
                                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pipe_fn-0.2.1.dist-info'...
Compiling './lib/python3.5/site-packages/pipe_fn.py'...
***   File "./lib/python3.5/site-packages/pipe_fn.py", line 48
    raise ValueError(f'`callable` expected, but get a `{then.__class__}` instead.')
                                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
